--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-local": "^1.0.0",
     "prisma": "^6.6.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.5.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
