file uploads and env configuration

--- a/.env
+++ b/.env
@@ -1,11 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
-PORT=4000
+ENVIRONMENT=DEV
 GLOBAL_PREFIX=api
 
 JWT_SECRET=6488304282dc52dd69d8fe5a0269f6a33197dfe242efd3b5
@@ -18,4 +11,13 @@ RESEND_API_KEY=re_Ctuody3u_4EZCkedG4ndjMX12YrXQ2nzw
 
 TRANSACTION_TIMEOUT=20000
 
-CLIENT=http://localhost:5173
+# DEV
+DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+PORT_DEV=4000
+CLIENT_DEV=http://localhost:5173
+DOMAIN_DEV=http://localhost:4000
+# PROD
+DATABASE_URL_PROD="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+PORT_PROD=4001
+CLIENT_PROD=
+DOMAIN_PROD=
