--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ TRANSACTION_TIMEOUT=20000
 
 # DEV
 DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+# DATABASE_URL_DEV="postgresql://kimlu:helloworld121@localhost:5432/rmd"
 PORT_DEV=4000
 CLIENT_DEV=http://localhost:5173
 DOMAIN_DEV=http://localhost:4000
