added receiptNo in Payment

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ REFRESH_JWT_SECRET=57c51820eb7c2932873796cad278c959e82e7ad5c7374e27
 REFRESH_JWT_EXPIRATION=7d
 
 RESEND_API_KEY=re_Ctuody3u_4EZCkedG4ndjMX12YrXQ2nzw
+DOMAIN=rmdland.com
 
 TRANSACTION_TIMEOUT=20000
 
@@ -16,9 +17,11 @@ DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rm
 # DATABASE_URL_DEV="postgresql://kimlu:helloworld121@localhost:5432/rmd"
 PORT_DEV=4000
 CLIENT_DEV=http://localhost:5173
-DOMAIN_DEV=http://localhost:4000
+FILE_PREFIX_DEV=http://localhost:4000
+EMAIL_FROM_DEV=no-reply@
 # PROD
 DATABASE_URL_PROD="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
 PORT_PROD=4001
 CLIENT_PROD=
-DOMAIN_PROD=
+FILE_PREFIX_PROD=http://localhost:4000
+EMAIL_FROM_PROD=
