--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "moment-timezone": "^0.5.48",
+    "number-to-words": "^1.2.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -60,6 +61,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/number-to-words": "^1.2.3",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
