--- a/.env
+++ b/.env
@@ -12,16 +12,35 @@ DOMAIN=rmdland.com
 
 TRANSACTION_TIMEOUT=20000
 
+# ? use it for locally development only
+DATABASE_URL_LOCAL="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+
 # DEV
-DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
-# DATABASE_URL_DEV="postgresql://kimlu:helloworld121@localhost:5432/rmd"
+DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@db-dev:5432/rmd"
+DATABASE_PORT_DEV=5433
+DATABASE_USER_DEV=postgres
+DATABASE_PASSWORD_DEV=mypassinpostgres@123
+DATABASE_DB_DEV=rmd
+PG_ADMIN_EMAIL_DEV=james@pgadmin.com
+PG_ADMIN_PASSWORD_DEV=admin
+PG_ADMIN_HOST_PORT_DEV=5050
+PG_ADMIN_CONTAINER_PORT_DEV=80
 PORT_DEV=4000
 CLIENT_DEV=http://localhost:5173
 FILE_PREFIX_DEV=http://localhost:4000
 EMAIL_FROM_DEV=no-reply@
+
 # PROD
 DATABASE_URL_PROD="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+DATABASE_PORT_PROD=5433
+DATABASE_USER_PROD=
+DATABASE_PASSWORD_PROD=
+DATABASE_DB_PROD=
+PG_ADMIN_EMAIL_PROD=
+PG_ADMIN_PASSWORD_PROD=
+PG_ADMIN_HOST_PORT_PROD=5050
+PG_ADMIN_CONTAINER_PORT_PROD=80
 PORT_PROD=4001
 CLIENT_PROD=
 FILE_PREFIX_PROD=http://localhost:4000
-EMAIL_FROM_PROD=
+EMAIL_FROM_PROD=no-reply@
