--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start-docker-compose-up-dev": "docker compose --profile dev up",
+    "start-docker-compose-down-dev": "docker compose --profile dev down",
+    "start-docker-compose-up-prod": "docker compose --profile prod up",
+    "start-docker-compose-down-prod": "docker compose --profile prod down",
+    "start-docker-compose-build-dev": "docker compose --profile dev build",
+    "start-docker-compose-build-prod": "docker compose --profile prod build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
