configured .env and .prisma

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DOMAIN=rmdland.com
 TRANSACTION_TIMEOUT=20000
 
 # ? use it for locally development only
-DATABASE_URL_LOCAL="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+DATABASE_URL_LOCAL="postgresql://postgres:rmdlandPostgresql%40123@localhost:5432/rmd"
 
 # DEV
 DATABASE_URL_DEV="postgresql://postgres:mypassinpostgres%40123@db-dev:5432/rmd"
