--- a/.env
+++ b/.env
@@ -31,16 +31,16 @@ FILE_PREFIX_DEV=http://localhost:4000
 EMAIL_FROM_DEV=no-reply@
 
 # PROD
-DATABASE_URL_PROD="postgresql://postgres:mypassinpostgres%40123@localhost:5432/rmd"
+DATABASE_URL_PROD="postgresql://postgres:rmdlandPostgresql%40123@localhost:5432/rmd"
 DATABASE_PORT_PROD=5433
-DATABASE_USER_PROD=
-DATABASE_PASSWORD_PROD=
-DATABASE_DB_PROD=
-PG_ADMIN_EMAIL_PROD=
-PG_ADMIN_PASSWORD_PROD=
+DATABASE_USER_PROD=postgres
+DATABASE_PASSWORD_PROD=mypassinpostgres@123
+DATABASE_DB_PROD=rmd
+PG_ADMIN_EMAIL_PROD=james@pgadmin.com
+PG_ADMIN_PASSWORD_PROD=admin
 PG_ADMIN_HOST_PORT_PROD=5050
 PG_ADMIN_CONTAINER_PORT_PROD=80
-PORT_PROD=4001
-CLIENT_PROD=
-FILE_PREFIX_PROD=http://localhost:4000
+PORT_PROD=4000
+CLIENT_PROD=http://localhost:5173
+FILE_PREFIX_PROD=http://localhost:1200
 EMAIL_FROM_PROD=no-reply@
