contract reservation forfeited and lot re-opens

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start-docker-compose-up-dev": "docker compose --profile dev up",
+    "start-docker-compose-up-dev": "docker compose --profile dev up -d && docker logs -f rmd_nest_dev",
     "start-docker-compose-down-dev": "docker compose --profile dev down",
-    "start-docker-compose-up-prod": "docker compose --profile prod up",
+    "start-docker-compose-up-prod": "docker compose --profile prod up -d && docker logs -f rmd_nest_prod",
     "start-docker-compose-down-prod": "docker compose --profile prod down",
     "start-docker-compose-build-dev": "docker compose --profile dev build",
     "start-docker-compose-build-prod": "docker compose --profile prod build",
+    "db-truncate": "npx prisma db execute --file ./prisma/truncate-tables.sql --schema ./prisma/schema.prisma",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
