--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - GLOBAL_PREFIX=${GLOBAL_PREFIX}
       - RESEND_API_KEY=${RESEND_API_KEY}
       - DOMAIN=${DOMAIN}
+      - EMAIL_REPLY_TO=${EMAIL_REPLY_TO}
       - TRANSACTION_TIMEOUT=${TRANSACTION_TIMEOUT}
       - DATABASE_URL_DEV=${DATABASE_URL_DEV}
       - CLIENT_DEV=${CLIENT_DEV}
@@ -48,6 +49,7 @@ services:
       - GLOBAL_PREFIX=${GLOBAL_PREFIX}
       - RESEND_API_KEY=${RESEND_API_KEY}
       - DOMAIN=${DOMAIN}
+      - EMAIL_REPLY_TO=${EMAIL_REPLY_TO}
       - TRANSACTION_TIMEOUT=${TRANSACTION_TIMEOUT}
       - DATABASE_URL_PROD=${DATABASE_URL_PROD}
       - CLIENT_PROD=${CLIENT_PROD}
