added docker:down script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "docker:deploy": "docker compose down --rmi all && docker compose up --build -d",
+    "docker:down": "docker compose down --rmi all",
     "start-docker-compose-up-dev": "docker compose --profile dev up -d && docker logs -f rmd_nest_dev",
     "start-docker-compose-down-dev": "docker compose --profile dev down",
     "start-docker-compose-up-prod": "docker compose --profile prod up -d && docker logs -f rmd_nest_prod",
