--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,46 +20,46 @@ jobs:
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: ap-southeast-1
 
-            - name: Deploy using SSM with rollback
+            - name: Deploy using SSM
               run: |
-                  # Send remote deployment commands to EC2 via SSM
                   COMMAND_ID=$(aws ssm send-command \
                     --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
                     --document-name "AWS-RunShellScript" \
                     --comment "Deploy NestJS App" \
                     --parameters commands='[
                       "set -e",
-                      "echo ✅ Starting deployment...",
+                      "echo ✅ Starting deployment on EC2...",
+
                       "cd /home/ubuntu/RMD_NEST",
 
-                      "echo → Stashing local changes (just in case)...",
+                      "echo → Resetting any local changes...",
                       "git reset --hard",
 
-                      "echo → Pulling latest version from Git...",
+                      "echo → Pulling latest code...",
                       "git pull origin master",
 
-                      "echo → Stopping containers...",
-                      "docker compose down --remove-orphans || true",
+                      "echo → Installing dependencies (if updated)...",
+                      "npm install --legacy-peer-deps || true",
 
-                      "echo → Building and starting containers...",
-                      "if docker compose up -d --build; then",
-                      "  echo ✅ Deployment success!",
+                      "echo → Running Docker deploy script...",
+                      "if npm run docker:deploy; then",
+                      "  echo ✅ Deployment successful!",
                       "else",
-                      "  echo ❌ Deployment failed! Rolling back…",
+                      "  echo ❌ Deployment failed — starting rollback...",
 
-                      "  echo → Resetting to previous commit...",
+                      "  echo → Rolling back to previous commit...",
                       "  git reset --hard HEAD~1",
 
-                      "  echo → Rebuilding old version...",
-                      "  docker compose up -d --build || true",
+                      "  echo → Re-running Docker deploy for rollback version...",
+                      "  npm run docker:deploy || true",
 
                       "  exit 1",
                       "fi",
 
-                      "echo → Cleaning unused images...",
+                      "echo → Cleaning unused Docker images...",
                       "docker image prune -f",
 
-                      "echo ✅ Deployment finished."
+                      "echo ✅ Finished deployment."
                     ]' \
                     --query "Command.CommandId" \
                     --output text)
