--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "docker:deploy": "docker compose down --remove-orphans && docker compose up --build --no-cache -d",
+    "docker:deploy": "docker compose down --remove-orphans && docker compose up --build -d",
     "docker:down": "docker compose down --remove-orphans",
     "start-docker-compose-up-dev": "docker compose --profile dev up -d && docker logs -f rmd_nest_dev",
     "start-docker-compose-down-dev": "docker compose --profile dev down",
