--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,43 +20,70 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
-      - name: Deploy using SSM
+      - name: Debug and Deploy using SSM
         run: |
+          set -e
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploy NestJS App" \
+            --comment "Debug Deploy NestJS App" \
             --parameters commands='[
-              "set -e",
-              "echo ✅ Starting deployment on EC2...",
-
+              "set -ex",
+              "echo =========== STARTING DEPLOYMENT ===========",
+              
               "cd /home/ubuntu/RMD_NEST",
-
+              "echo → Current directory: $(pwd)",
+              
+              "echo → Git status before:",
+              "git status --short",
+              "echo → Current commit: $(git log -1 --oneline)",
+              
+              "echo → Fetching from origin...",
+              "git fetch origin",
+              
+              "echo → Remote branches:",
+              "git branch -r",
+              
               "echo → Pulling latest code...",
               "git pull origin master",
-
-              "echo → Stopping existing containers...",
+              
+              "echo → Git status after pull:",
+              "git status --short",
+              "echo → New commit: $(git log -1 --oneline)",
+              
+              "echo → Checking package.json version:",
+              "cat package.json | grep version",
+              
+              "echo → Stopping containers...",
               "npm run docker:down",
-
-              "echo → Building and starting new containers...",
+              
+              "echo → Starting new deployment...",
               "npm run docker:deploy",
-
-              "echo → Waiting for services to start...",
+              
+              "echo → Waiting for startup...",
               "sleep 30",
-
-              "echo → Checking container status...",
+              
+              "echo → Container status:",
               "docker ps --filter name=rmdland-server-container",
-
-              "echo → Checking application health...",
-              "CONTAINER_HEALTH=$(docker inspect --format=\"{{.State.Health.Status}}\" rmdland-server-container 2>/dev/null || echo \"no-healthcheck\")",
-              "echo Health status: $CONTAINER_HEALTH",
-
-              "echo → Cleaning up Docker resources...",
-              "docker system prune -f --volumes",
-
-              "echo ✅ Deployment completed successfully!"
+              
+              "echo → Final commit verification: $(git log -1 --oneline)",
+              "echo ✅ DEPLOYMENT COMPLETED"
             ]' \
+            --cloud-watch-output-config 'CloudWatchOutputEnabled=true' \
             --query "Command.CommandId" \
             --output text)
 
-          echo "SSM command sent with ID: $COMMAND_ID"
+          echo "SSM Command ID: $COMMAND_ID"
+
+          # Wait and check command status
+          echo "Waiting for command to complete..."
+          sleep 30
+
+          # Get command output
+          aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id ${{ secrets.EC2_INSTANCE_ID }}
+
+      - name: Verify Deployment
+        run: |
+          echo "Deployment command sent. Check AWS Systems Manager for detailed logs."
