--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,36 +20,36 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
-      - name: Debug and Deploy using SSM
+      - name: Deploy using SSM
         run: |
           set -e
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
             --document-name "AWS-RunShellScript" \
-            --comment "Debug Deploy NestJS App" \
+            --comment "Deploy NestJS App" \
             --parameters commands='[
               "set -ex",
               "echo =========== STARTING DEPLOYMENT ===========",
               
+              "echo → Fixing git ownership issues...",
+              "sudo git config --global --add safe.directory /home/ubuntu/RMD_NEST",
+              
+              "echo → Switching to ubuntu user...",
+              "sudo -u ubuntu /bin/bash -c \"",
               "cd /home/ubuntu/RMD_NEST",
-              "echo → Current directory: $(pwd)",
+              "echo → Current directory: \\$(pwd)",
+              "echo → Current user: \\$(whoami)",
               
               "echo → Git status before:",
               "git status --short",
-              "echo → Current commit: $(git log -1 --oneline)",
-              
-              "echo → Fetching from origin...",
-              "git fetch origin",
-              
-              "echo → Remote branches:",
-              "git branch -r",
+              "echo → Current commit: \\$(git log -1 --oneline)",
               
               "echo → Pulling latest code...",
               "git pull origin master",
               
               "echo → Git status after pull:",
-              "git status --short",
-              "echo → New commit: $(git log -1 --oneline)",
+              "git status --short", 
+              "echo → New commit: \\$(git log -1 --oneline)",
               
               "echo → Checking package.json version:",
               "cat package.json | grep version",
@@ -59,6 +59,7 @@ jobs:
               
               "echo → Starting new deployment...",
               "npm run docker:deploy",
+              "\"",
               
               "echo → Waiting for startup...",
               "sleep 30",
@@ -66,7 +67,6 @@ jobs:
               "echo → Container status:",
               "docker ps --filter name=rmdland-server-container",
               
-              "echo → Final commit verification: $(git log -1 --oneline)",
               "echo ✅ DEPLOYMENT COMPLETED"
             ]' \
             --cloud-watch-output-config 'CloudWatchOutputEnabled=true' \
@@ -83,7 +83,3 @@ jobs:
           aws ssm get-command-invocation \
             --command-id "$COMMAND_ID" \
             --instance-id ${{ secrets.EC2_INSTANCE_ID }}
-
-      - name: Verify Deployment
-        run: |
-          echo "Deployment command sent. Check AWS Systems Manager for detailed logs."
