--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,63 +23,22 @@ jobs:
       - name: Deploy using SSM
         run: |
           set -e
+          echo "🚀 Starting deployment to EC2..."
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
             --document-name "AWS-RunShellScript" \
             --comment "Deploy NestJS App" \
             --parameters commands='[
-              "set -ex",
-              "echo =========== STARTING DEPLOYMENT ===========",
-              
-              "echo → Fixing git ownership issues...",
-              "sudo git config --global --add safe.directory /home/ubuntu/RMD_NEST",
-              
-              "echo → Switching to ubuntu user...",
-              "sudo -u ubuntu /bin/bash -c \"",
+              "set -e",
               "cd /home/ubuntu/RMD_NEST",
-              "echo → Current directory: \\$(pwd)",
-              "echo → Current user: \\$(whoami)",
-              
-              "echo → Git status before:",
-              "git status --short",
-              "echo → Current commit: \\$(git log -1 --oneline)",
-              
-              "echo → Pulling latest code...",
-              "git pull origin master",
-              
-              "echo → Git status after pull:",
-              "git status --short", 
-              "echo → New commit: \\$(git log -1 --oneline)",
-              
-              "echo → Checking package.json version:",
-              "cat package.json | grep version",
-              
-              "echo → Stopping containers...",
-              "npm run docker:down",
-              
-              "echo → Starting new deployment...",
-              "npm run docker:deploy",
-              "\"",
-              
-              "echo → Waiting for startup...",
-              "sleep 30",
-              
-              "echo → Container status:",
-              "docker ps --filter name=rmdland-server-container",
-              
-              "echo ✅ DEPLOYMENT COMPLETED"
+              "sudo -u ubuntu git pull origin master",
+              "sudo -u ubuntu npm run docker:down",
+              "sudo -u ubuntu npm run docker:deploy",
+              "echo ✅ Deployment completed successfully!"
             ]' \
-            --cloud-watch-output-config 'CloudWatchOutputEnabled=true' \
             --query "Command.CommandId" \
             --output text)
 
           echo "SSM Command ID: $COMMAND_ID"
-
-          # Wait and check command status
-          echo "Waiting for command to complete..."
-          sleep 30
-
-          # Get command output
-          aws ssm get-command-invocation \
-            --command-id "$COMMAND_ID" \
-            --instance-id ${{ secrets.EC2_INSTANCE_ID }}
+          echo "📝 Deployment initiated! Check your application in a few minutes."
+          echo "💡 Note: Docker build may take several minutes to complete."
